--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "name": "next"
       }
     ],
-    "ignoreDeprecations": "6.0", // ✅ ADICIONADA A VÍRGULA AQUI
+    //"ignoreDeprecations": "6.0", // ✅ ADICIONADA A VÍRGULA AQUI
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
