fix: Finalizando setup de Google Auth antes do deploy

--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "squadra",
   "version": "0.1.0",
   "private": true,
-"scripts": {
-  "dev": "next dev",
-  "build": "npx prisma generate && next build",
-  "start": "next start",
-  "lint": "next lint"
-},
+  "scripts": {
+    "dev": "next dev",
+    "build": "npx prisma generate && next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.11.0",
+    "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.17.1",
     "bcrypt": "^6.0.0",
+    "drizzle-orm": "^0.44.6",
     "next": "15.5.5",
+    "next-auth": "^4.24.11",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
