fix: Finalizando correção de tipagem do NextAuth movendo auth.d.ts para a raiz

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/drizzle-adapter": "^1.11.0",
     "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.17.1",
+    "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^6.0.0",
     "drizzle-orm": "^0.44.6",
     "next": "15.5.5",
