feat: Implementando AuthGuard e protegendo a rota /dashboard

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@auth/drizzle-adapter": "^1.11.0",
     "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.17.1",
+    "@trpc/client": "^11.6.0",
+    "@trpc/next": "^11.6.0",
+    "@trpc/react-query": "^11.6.0",
+    "@trpc/server": "^11.6.0",
     "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^6.0.0",
     "drizzle-orm": "^0.44.6",
@@ -19,7 +23,9 @@
     "next-auth": "^4.24.11",
     "pg": "^8.16.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "superjson": "^2.2.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
