--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@trpc/server": "^11.6.0",
     "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.6",
+    "lucide-react": "^0.552.0",
     "next": "15.5.5",
     "next-auth": "^4.24.11",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "superjson": "^2.2.2",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -39,6 +43,7 @@
     "prisma": "^6.17.1",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
